--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Project template for gulp.js",
   "main": "gulpfile.js",
   "scripts": {
-    "start": "./node_modules/.bin/coffee src/server/index.coffee"
+    "start": "coffee src/server/index.coffee",
+    "test": "gulp test"
   },
   "keywords": [
     "template"
@@ -42,7 +43,10 @@
     "gulp-wrap": "~0.3.0",
     "partialify": "~3.1.1",
     "shortify": "0.0.3",
-    "stylus": "~0.44.0"
+    "stylus": "~0.44.0",
+    "assertive": "~1.3.2",
+    "gulp-mocha": "~0.4.1",
+    "glob": "~3.2.9"
   },
   "browserify": {
     "transform": [
