--- a/package.json
+++ b/package.json
@@ -46,7 +46,8 @@
     "stylus": "~0.44.0",
     "assertive": "~1.3.2",
     "gulp-mocha": "~0.4.1",
-    "glob": "~3.2.9"
+    "glob": "~3.2.9",
+    "gulp-clean": "~0.2.4"
   },
   "browserify": {
     "transform": [
