--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "coffee-script": "~1.7.1",
     "facile": "~1.0.1",
     "jquery": "~2.1.0",
-    "express": "~4.1.1"
+    "express": "~4.1.1",
+    "testium": "~1.5.0"
   },
   "devDependencies": {
     "gulp-rename": "~0.2.1",
@@ -47,7 +48,8 @@
     "assertive": "~1.3.2",
     "gulp-mocha": "~0.4.1",
     "glob": "~3.2.9",
-    "gulp-clean": "~0.2.4"
+    "gulp-clean": "~0.2.4",
+    "mkdirp": "~0.4.0"
   },
   "browserify": {
     "transform": [
