--- a/package.json
+++ b/package.json
@@ -14,47 +14,39 @@
     "coffee-script": "~1.7.1",
     "facile": "~1.0.1",
     "jquery": "~2.1.0",
-    "express": "~4.1.1",
-    "testium": "~1.5.0"
+    "express": "~4.1.1"
   },
   "devDependencies": {
-    "gulp-rename": "~0.2.1",
-    "gulp-uglify": "~0.1.0",
-    "gulp-util": "~2.2.9",
-    "gulp-stylus": "^1.0.0",
-    "gulp-jade": "~0.3.0",
-    "node-static": "~0.7.3",
-    "gulp-minify-css": "~0.2.0",
-    "tiny-lr": "0.0.5",
-    "gulp-livereload": "~0.2.0",
+    "assertive": "~1.3.2",
     "browserify": "^3.38.0",
     "browserify-shim": "^3.4.1",
-    "gulp-plumber": "~0.5.6",
-    "gulp-autoprefixer": "0.0.6",
-    "gulp-streamify": "0.0.5",
-    "vinyl-source-stream": "~0.1.1",
     "coffeeify": "~0.6.0",
-    "gulp": "~3.6.0",
-    "watchify": "~0.6.3",
-    "through2": "~0.4.1",
     "concat-stream": "~1.4.5",
-    "lodash": "~2.4.1",
+    "glob": "~3.2.9",
+    "gulp": "~3.6.0",
+    "gulp-clean": "~0.2.4",
+    "gulp-jade": "~0.3.0",
+    "gulp-mocha": "~0.4.1",
+    "gulp-rename": "~0.2.1",
+    "gulp-stylus": "^1.0.0",
     "gulp-task-listing": "~0.2.2",
-    "gulp-concat": "~2.2.0",
+    "gulp-util": "~2.2.9",
+    "gulp-uglify": "~0.1.0",
     "gulp-wrap": "~0.3.0",
+    "lodash": "~2.4.1",
+    "mkdirp": "~0.4.0",
     "partialify": "~3.1.1",
     "shortify": "0.0.3",
     "stylus": "~0.44.0",
-    "assertive": "~1.3.2",
-    "gulp-mocha": "~0.4.1",
-    "glob": "~3.2.9",
-    "gulp-clean": "~0.2.4",
-    "mkdirp": "~0.4.0"
+    "testium": "~1.5.0",
+    "through2": "~0.4.1",
+    "vinyl-source-stream": "~0.1.1",
+    "watchify": "~0.6.3"
   },
   "browserify": {
     "transform": [
-      "partialify",
-      "browserify-shim"
+      "browserify-shim",
+      "partialify"
     ]
   },
   "browserify-shim": {}
